--- a/styel/style.css
+++ b/styel/style.css
@@ -20,5 +20,30 @@ body .game {
 body .game .block {
   border: 2px solid black;
   cursor: pointer;
+  position: relative;
+}
+
+body .game .block i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+body .game .block .fa-times {
+  font-size: 200px;
+}
+
+body .game .block .fa-circle {
+  font-size: 150px;
+}
+
+body .game .block .hide {
+  display: none;
+}
+
+body .game .block .show {
+  display: block;
 }
 /*# sourceMappingURL=style.css.map */
