--- a/styel/style.css
+++ b/styel/style.css
@@ -1,19 +1,12 @@
-body {
-  text-align: center;
-}
-
 body .game {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  margin: auto;
+  margin-top: 50px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: auto auto auto;
       grid-template-columns: auto auto auto;
-  min-width: 500px;
-  min-height: 500px;
+  width: 30em;
+  height: 30em;
   grid-gap: 10px;
 }
 
@@ -40,6 +33,25 @@ body .game .block .fa-circle {
 }
 
 body .game .block .hide {
+  display: none;
+}
+
+body .alert {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+body .alert .text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+body .hide {
   display: none;
 }
 /*# sourceMappingURL=style.css.map */
