--- a/styel/style.scss
+++ b/styel/style.scss
@@ -5,16 +5,17 @@
     transform: translate(-50%, -50%);
 }
 
+// 
 $timesSize:200px;
 $circleSize: 150px;
 body {
-    text-align: center;
     .game {
-        @include center();
+        margin: auto;
+        margin-top: 50px;
         display: grid;
         grid-template-columns: auto auto auto;
-        min-width: 500px;
-        min-height: 500px;
+        width: 30em;
+        height: 30em;
         grid-gap: 10px;
         .block {
             border: 2px solid black;
@@ -33,5 +34,18 @@ body {
                 display: none;
             }
         }
+    }
+    // Wining Screen
+    .alert {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 100vh;
+        .text {
+            @include center();
+        }
+    }
+    .hide {
+        display: none;
     }
 }
